Draft overview and intro for Assignment 5

--- a/final_project_Moin.qmd
+++ b/final_project_Moin.qmd
@@ -14,13 +14,13 @@ Use this template to complete your project throughout the course. Your Final Pro
 
 ## Overview {#sec-overview}
 
-Give a brief a description of your project and its goal(s), what data you are using to complete it, and what two faculty/staff in different fields you have spoken to about your project with a brief summary of what you learned from each person. Include a link to your final project GitHub repository.
+Spirometry is a mainstay of diagnosis and monitoring for many pulmonary diseases. Although spirometry encodes a large amount of data with thousands of data points per patient, it is typically interpreted only via a small number of conventional measurements (e.g., forced vital capacity [FVC]) and, less commonly, subjective evaluation of the flow-volume loop. By leveraging the spirometry data in the National Health and Nutrition Examination Survey (NHANES), we can develop a proof-of-concept deep learning model to motivate development and inference at larger scale.
 
 ## Introduction {#sec-introduction}
 
-Describe the problem addressed, its significance, and some background to motivate the problem. This should extend what is in the @sec-overview.
+As compared to other fields of medicine, pulmonary disease is often more subjective and less algorithmic in its approach to disease diagnosis and monitoring. Although this can be beneficial at times as expert clinicians may leverage "gestalt" judgments for patients' benefit, it also has significant downsides. Among them: the range of individual clinician expertise across a broad swath of uncommon pulmonary diseases can lead to delays in diagnosis and appropriate treatment; ambiguity in disease definitions can make it difficult to appropriately define and recruit populations for clinical trials; and reliance on late manifestations of disease for diagnosis -- like marked reductions in exercise capacity, grossly abnormal pulmonary function tests, and parenchymal changes detectable at the resolution of CT scans -- may shorten the window in which patients can benefit from disease-modifying therapies.
 
-Explain why your problem is interdisciplinary, what fields can contribute to its understanding, and incorporate background related to what you learned from meeting with faculty/staff.
+One area for potential advancement in addressing these issues is interpretation of spirometry. Spirometry is one component of "pulmonary function testing" (PFT), an array of tests in which patients actively participate in breathing maneuvers to elicit measurements of pulmonary function and behavior. In spirometry, patients are coached to maximally inhale and then forcefully exhale while the resulting air flow is measured. Although these maneuvers yield a time-series of flow measurements with thousands of data points, a typical PFT report summarizes spirometry into only a few discrete measurements. We hypothesize that there is more meaningful information about pulmonary function and disease encoded into these rich quantitative data sets than is captured by current, conventional pulmonary function measurements. By developing a deep learning model to interpret waveform spirometry data as collected in the National Health and Nutrition Examination Survey (NHANES), we will leverage techniques from machine learning and computer science; methods of inference from biostatistics and epidemiology to assess the model's performance; and domain specific knowledge from pulmonary medicine to ensure the model is fit for purpose and identify next steps in discovery. Although the NHANES cohort is relatively small, demonstrating that a model trained on these data can glean clinically relevant data will provide the motivation for future inquiries training and externally validating in larger data sets.
 
 ## Methods {#sec-methods}
 
